--- a/app/views/stories/new.html.erb
+++ b/app/views/stories/new.html.erb
@@ -1,1 +1,40 @@
 <h1>New Story</h1>
+
+<%= simple_form_for(@story) do |f| %>
+  <%= f.error_notification %>
+
+  <div class="form-inputs">
+    <%= f.input :title,
+                required: false,
+                autofocus: true,
+                input_html: { autocomplete: "title" } %>
+    <%= f.input :photos,
+                required: false,
+                input_html: { autocomplete: "photos" } %>
+    <%= f.input :latitude,
+                required: false,
+                input_html: { autocomplete: "latitude" }%>
+    <%= f.input :longitude,
+                required: false,
+                input_html: { autocomplete: "longitude" } %>
+    <%= f.input :price_rating,
+                required: false,
+                input_html: { autocomplete: "price" } %>
+    <%= f.input :worth_it,
+                required: false,
+                input_html: { autocomplete: "worthiness" } %>
+    <%= f.input :mood_type,
+                required: false,
+                input_html: { autocomplete: "mood" } %>
+    <%= f.input :experience_type,
+                required: false,
+                input_html: { autocomplete: "experience" } %>
+    <%= f.input :ambience_type,
+                required: false,
+                input_html: { autocomplete: "ambience" } %>
+  </div>
+
+  <div class="form-actions">
+    <%= f.button :submit, "Create" %>
+  </div>
+<% end %>
