Update images to jpg

--- a/app/views/stories/edit.html.erb
+++ b/app/views/stories/edit.html.erb
@@ -1,3 +1,4 @@
 <h1>Edit Story</h1>
-<%= @story.title%>
-<img src="#{@story.photos}">
+<%= @story.title %>
+
+<%= image_tag("/seed/bbq.jpg", alt: "Story Image") %>
