Move seed images to Image folder and display in Story Edit page

--- a/app/views/stories/edit.html.erb
+++ b/app/views/stories/edit.html.erb
@@ -1,4 +1,6 @@
 <h1>Edit Story</h1>
 <%= @story.title %>
 
-<%= image_tag("/seed/bbq.jpg", alt: "Story Image") %>
+<% @story.photos.each do |photo_url| %>
+  <%= image_tag "#{photo_url}", alt: "Story Image", width: 300 %>
+<% end %>
