--- a/app/views/stories/new.html.erb
+++ b/app/views/stories/new.html.erb
@@ -26,9 +26,9 @@
     <%= f.input :mood_type,
                 required: false,
                 input_html: { autocomplete: "mood" } %>
-    <%= f.input :experience_type,
+    <%= f.input :feeling_type,
                 required: false,
-                input_html: { autocomplete: "experience" } %>
+                input_html: { autocomplete: "feeling" } %>
     <%= f.input :ambience_type,
                 required: false,
                 input_html: { autocomplete: "ambience" } %>
