Add Automatic Geolocation feature

--- a/app/views/launch/home.html.erb
+++ b/app/views/launch/home.html.erb
@@ -1,2 +1,2 @@
 <h1>Launch#home</h1>
-<p>Find me in app/views/launch/home.html.erb</p>
+<%= link_to image_tag("https://source.unsplash.com/W8KTS-mhFUE/600x400"), new_story_path %>
