--- a/app/views/stories/new.html.erb
+++ b/app/views/stories/new.html.erb
@@ -3,38 +3,15 @@
 <%= simple_form_for(@story) do |f| %>
   <%= f.error_notification %>
 
-  <div class="form-inputs">
-    <%= f.input :title,
-                required: false,
-                autofocus: true,
-                input_html: { autocomplete: "title" } %>
     <%= f.input :photo, as: :file,
-                required: false,
+                required: true,
                 input_html: { autocomplete: "photo" } %>
-    <%= f.input :latitude,
+    <%= f.input :latitude, as: :hidden,
                 required: false,
                 input_html: { autocomplete: "latitude" }%>
-    <%= f.input :longitude,
+    <%= f.input :longitude, as: :hidden,
                 required: false,
                 input_html: { autocomplete: "longitude" } %>
-    <%= f.input :price_rating,
-                required: false,
-                input_html: { autocomplete: "price" } %>
-    <%= f.input :worth_it,
-                required: false,
-                input_html: { autocomplete: "worthiness" } %>
-    <%= f.input :mood_type,
-                required: false,
-                input_html: { autocomplete: "mood" } %>
-    <%= f.input :feeling_type,
-                required: false,
-                input_html: { autocomplete: "feeling" } %>
-    <%= f.input :ambience_type,
-                required: false,
-                input_html: { autocomplete: "ambience" } %>
-  </div>
-
-  <div class="form-actions">
+    <p id='geolocation_notice'>(Geolocation will be captured automatically)</p>
     <%= f.button :submit, "Create" %>
-  </div>
 <% end %>
