--- a/app/views/stories/edit.html.erb
+++ b/app/views/stories/edit.html.erb
@@ -3,7 +3,7 @@
 
 <% if @story.photos.attached? %>
   <% @story.photos.each do |photo| %>
-    <%= cl_image_tag photos.key, height: 300, width: 400, crop: :fill, alt: "Story Image" %>
+    <%= cl_image_tag photo.key, height: 300, width: 400, crop: :fill, alt: "Story Image" %>
   <% end %>
 <% elsif @story.title %>
   <%= image_tag "https://source.unsplash.com/300x300/?#{@story.title}", alt: "Story Image", width: 300 %>
