--- a/app/views/launch/home.html.erb
+++ b/app/views/launch/home.html.erb
@@ -1,2 +1,11 @@
-<h1>Launch#home</h1>
-<%= link_to image_tag("https://source.unsplash.com/W8KTS-mhFUE/600x400"), new_story_path %>
+<div class="container__contents">
+  <h1>Launch#home</h1>
+  <%= link_to image_tag("https://source.unsplash.com/W8KTS-mhFUE/600x400"), new_story_path %>
+</div>
+
+<footer>
+  <div class="button-container">
+    <a href="#!" class="button button__left">menu</a>
+    <a href="#!" class="button button__right">2nd menu</a>
+  </div>
+</footer>
