--- a/app/views/taggings/index.html.erb
+++ b/app/views/taggings/index.html.erb
@@ -1,7 +1,1 @@
-<ul>
-  <% @taggings.each do |tagging| %>
-    <li>
-      <%= tagging.tag.name %>: <%= tagging.tag.tag_category.name %>
-    </li>
-  <% end %>
-</ul>
+<%= render 'shared/tag-list' %>
