--- a/app/assets/stylesheets/_buttons.scss
+++ b/app/assets/stylesheets/_buttons.scss
@@ -17,10 +17,24 @@
 
 .button__left {
   margin-right: 1rem;
-  background-color: pink;
 }
 
 .button__right {
   margin-left: 1rem;
-  background-color: orange;
+}
+
+.button__edit {
+  background-color: $edit;
+  &:hover {
+    background-color: $edit-hover;
+    color: white;
+  }
+}
+
+.button__delete {
+  background-color: $delete;
+  &:hover {
+    background-color: $delete-hover;
+    color: white;
+  }
 }
