--- a/app/assets/stylesheets/stories.scss
+++ b/app/assets/stylesheets/stories.scss
@@ -3,11 +3,39 @@
 // You can use Sass (SCSS) here: https://sass-lang.com/
 
 .photo-carousel {
-
+  padding-top: 10%;
+  text-align: center;
+  img {
+    height: 100%;
+  }
 }
 
 .story-info {
   display: grid;
   grid-template-columns: 1fr 1fr;
   grid-gap: 1rem;
+  padding-top: 10%;
+}
+
+.price__true {
+  color: $yellow;
+}
+
+.price__false {
+  color: $light-grey;
+}
+
+.worth-it__true, .worth-it__false {
+  margin: 0.5rem 0;
+  padding: 0.1rem 1rem;
+  color: $text-dark;
+  text-align: center;
+}
+
+.worth-it__true {
+  background-color: $light-yellow;
+}
+
+.worth-it__false {
+  background-color: $light-grey;
 }
