--- a/app/views/shared/_pricing.html.erb
+++ b/app/views/shared/_pricing.html.erb
@@ -1,4 +1,6 @@
-<ul>
-  <%= @story.price_rating %>
-  <%= @story.worth_it %>
-</ul>
+<% @story.price_rating.times do %>
+  <span class="price__true">$</span>
+<% end %>
+<% (3 - @story.price_rating).times do %>
+  <span class="price__false">$</span>
+<% end %>
