--- a/app/views/stories/show.html.erb
+++ b/app/views/stories/show.html.erb
@@ -1,22 +1,12 @@
 <div class="container__contents">
-  <h1>This Story</h1>
-
   <section class="photo-carousel container__three-quart-height">
-    <% if @story.photos.attached? %>
-      <% @story.photos.each do |photo| %>
-        <%= cl_image_tag photo.key, height: 400, width: 300, crop: :fill, alt: "Story Image" %>
-      <% end %>
-    <% elsif @story.title %>
-      <%= image_tag "https://source.unsplash.com/300x400/?#{@story.title}", alt: "Story Image", width: 300 %>
-    <% else %>
-      <%= image_tag "https://source.unsplash.com/collection/4656528/300x400", alt: "Story Image", width: 300 %>
-    <% end %>
+    <%= render 'shared/photos' %>
   </section>
 
   <section class="story-info">
     <div class="story-info__description">
       <div class="story-into__description--title">
-        <%= @story.title %>
+        <%= render 'shared/story-title' %>
       </div>
       <div class="story-info__description--tag-list">
         <%= render 'shared/tag-list' %>
@@ -25,16 +15,17 @@
 
     <div class="story-info__price-rating">
       <%= render 'shared/pricing' %>
+      <%= render 'shared/worth_it' %>
     </div>
   </section>
 </div>
 
 <footer>
   <div class="button-container">
-    <%= link_to 'Edit Story', edit_story_path(@story), class: 'button button__left' %>
+    <%= link_to 'Edit Story', edit_story_path(@story), class: 'button button__edit button__left' %>
     <%= link_to "Delete",
   story_path(@story),
   method: :delete,
-  data: { confirm: "Are you sure?" }, class: 'button button__right' %>
+  data: { confirm: "Are you sure?" }, class: 'button button__delete button__right' %>
   </div>
 </footer>
