--- a/app/views/shared/_worth_it.html.erb
+++ b/app/views/shared/_worth_it.html.erb
@@ -1,5 +1,5 @@
 <% if @story.worth_it %>
   <p class="worth-it__true">worth it</p>
 <% else %>
-  <p class="worth-it__false">not worth it</p>
+  <p class="worth-it__false">worth it</p>
 <% end %>
