--- a/app/views/stories/show.html.erb
+++ b/app/views/stories/show.html.erb
@@ -1,16 +1,19 @@
 <div class="container__contents">
   <section class="photo-carousel container__three-quart-height">
-    <%= render 'shared/photos' %>
+    <div class="photo-container">
+      <%= render 'shared/photos' %>
+    </div>
   </section>
+  <div class="carousel-nav">
+    <%= render 'shared/carousel-btn' %>
+  </div>
 
   <section class="story-info">
-    <div class="story-info__description">
-      <div class="story-into__description--title">
-        <%= render 'shared/story-title' %>
-      </div>
-      <div class="story-info__description--tag-list">
-        <%= render 'shared/tag-list' %>
-      </div>
+    <div class="story-info__title">
+      <%= render 'shared/story-title' %>
+    </div>
+    <div class="story-info__tag-list">
+      <%= render 'shared/tag-list' %>
     </div>
 
     <div class="story-info__price-rating">
