--- a/app/views/shared/_tag-list.html.erb
+++ b/app/views/shared/_tag-list.html.erb
@@ -29,7 +29,7 @@
 <!-- Other Tags -->
 <ul>
   <% @other_taggings.each do |tagging| %>
-    <li class='tag tag__experience'>
+    <li class='tag tag__other'>
       <%= tagging.tag.name %>
     </li>
   <% end %>
