--- a/app/assets/stylesheets/tagging.scss
+++ b/app/assets/stylesheets/tagging.scss
@@ -1,6 +1,7 @@
 // Place all the styles related to the tagging controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: https://sass-lang.com/
+
 .tag {
   margin: 0.5rem auto;
   padding: 0.1rem 1rem;
@@ -18,6 +19,7 @@
   background-color: $green;
 }
 
-.tag__location {
-  background-color: $green;
+.tag__other {
+  background-color: $grey;
+  color: $text-main;
 }
