--- a/app/views/stories/index.html.erb
+++ b/app/views/stories/index.html.erb
@@ -1,9 +1,15 @@
-<ul>
+<div class="story-cards-container">
   <% @stories.each do |story| %>
-    <li>
-      <%= link_to story_path(story) do %>
-        <%= story.title %>
-      <% end %>
-    </li>
+    <%= link_to story_path(story) do %>
+      <div class="card story-card">
+        <% @story = story %>
+        <%= render 'shared/photos' %>
+        <div class="story-info">
+          <div class="story-info__title">
+            <%= render 'shared/story-title' %>
+          </div>
+        </div>
+      </div>
+    <% end %>
   <% end %>
-</ul>
+</div>
