--- a/app/assets/stylesheets/components/_buttons.scss
+++ b/app/assets/stylesheets/components/_buttons.scss
@@ -4,7 +4,7 @@
   display: flex;
   align-items: center;
   justify-content: space-around;
-  padding: 0 10%;
+  padding: 5% 10%;
   height: 3rem;
 }
 
@@ -13,7 +13,7 @@
   width: 100%;
   font-size: 1rem;
   padding: 0.5rem;
-  color: white;
+  color: $text-alt;
   border-radius: 4px;
 }
 
@@ -29,7 +29,7 @@
   background-color: $edit;
   &:hover {
     background-color: $edit-hover;
-    color: white;
+    color: $text-alt;
   }
 }
 
@@ -37,6 +37,14 @@
   background-color: $delete;
   &:hover {
     background-color: $delete-hover;
-    color: white;
+    color: $text-alt;
+  }
+}
+
+.button__confirm {
+  background-color: $confirm;
+  &:hover {
+    background-color: $confirm-hover;
+    color: $text-alt;
   }
 }
