--- a/app/assets/stylesheets/components/_config.scss
+++ b/app/assets/stylesheets/components/_config.scss
@@ -22,6 +22,7 @@ $green: #00CC99;
 
 // COLOUR SETTINGS
 $base: $light-grey;
+$card-base: white;
 $text-alt: white;
 $text-main: $dark-grey;
 $link: $purple;
