--- a/app/assets/stylesheets/components/launch.scss
+++ b/app/assets/stylesheets/components/launch.scss
@@ -1,3 +1,11 @@
 // Place all the styles related to the Launch controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: https://sass-lang.com/
+
+.launch-image {
+  height: 100%;
+  width: 100%;
+  object-fit: cover;
+  border-radius: 4px;
+}
+
