--- a/app/views/launch/home.html.erb
+++ b/app/views/launch/home.html.erb
@@ -1,17 +1,15 @@
 <div class="container__contents">
     <section class="splash-content">
+      <%= link_to new_story_path do %>
         <%= image_tag "https://source.unsplash.com/nI7knd5sQfo/600x400", alt: "Story Image", class: "launch-image" %>
+      <% end %>
     </section>
 </div>
 
-<footer class="nav-content">
-  <div class=" button-container">
+<footer>
+  <div class="button-container">
     <a href="#!" class="button button__confirm">menu</a>
   </div>
 </footer>
-
-<!-- W8KTS-mhFUE -->
-      <%= link_to new_story_path do %>
-      <% end %>
 
 
