--- a/app/views/stories/show.html.erb
+++ b/app/views/stories/show.html.erb
@@ -25,8 +25,8 @@
 
 <footer>
   <div class="button-container">
-    <%= link_to 'Edit Story', edit_story_path(@story), class: 'button button__edit button__left' %>
-    <%= link_to "Delete",
+    <%= link_to 'edit Story', edit_story_path(@story), class: 'button button__edit button__left' %>
+    <%= link_to "delete",
   story_path(@story),
   method: :delete,
   data: { confirm: "Are you sure?" }, class: 'button button__delete button__right' %>
