--- a/app/assets/stylesheets/components/_buttons.scss
+++ b/app/assets/stylesheets/components/_buttons.scss
@@ -4,7 +4,7 @@
   display: flex;
   align-items: center;
   justify-content: space-around;
-  padding: 5% 10%;
+  padding: 0 10% 5% 10%;
   height: 3rem;
 }
 
