--- a/app/views/stories/new.html.erb
+++ b/app/views/stories/new.html.erb
@@ -1,20 +1,25 @@
-<h1>New Story</h1>
 
-<%= simple_form_for(@story) do |f| %>
-  <%= f.error_notification %>
-
+<div class="container__contents">
+  <%= simple_form_for(@story) do |f| %>
+    <%= f.error_notification %>
     <%= f.input :photos,
                 as: :file,
                 required: true,
-                input_html: { autocomplete: "photo", multiple: true } %>
+                input_html: { multiple: true } %>
     <%= f.input :latitude,
                 as: :hidden,
                 required: false,
-                input_html: { autocomplete: "latitude" }%>
+                input_html: { autocomplete: "latitude" } %>
     <%= f.input :longitude,
                 as: :hidden,
                 required: false,
                 input_html: { autocomplete: "longitude" } %>
-    <p id='geolocation_notice'>(Geolocation will be captured automatically)</p>
-    <%= f.button :submit, "Create" %>
-<% end %>
+    <p id='js-geolocation_notice'>(Geolocation will be captured automatically)</p>
+</div>
+<footer>
+    <div class="button-container">
+      <%= f.button :submit, "create story", class: 'button button__confirm' %>
+    </div>
+  <% end %>
+</footer>
+
