--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -6,6 +6,7 @@
 @import './components/tagging';
 @import './components/cards';
 @import './components/launch';
+@import './components/tags';
 
 
 body {
