Add Create and Update Route and views for Tags and update Story#New Styling

--- a/app/assets/stylesheets/components/_config.scss
+++ b/app/assets/stylesheets/components/_config.scss
@@ -39,6 +39,7 @@ $header-font: 'Roboto', sans-serif;
 $base-font: 'Balsamiq Sans', cursive;
 $normal: 400;
 $bold: 700;
+$small-font: 0.8rem;
 
 // MEDIA QUERY SETTINGS
 $tablet-width: 768px;
