--- a/app/views/stories/edit.html.erb
+++ b/app/views/stories/edit.html.erb
@@ -11,5 +11,5 @@
   <%= image_tag "https://source.unsplash.com/collection/4656528/300x400", alt: "Story Image", width: 300 %>
 <% end %>
 
-<%= link_to "Edit Tagging", story_taggings_path(@story) %>
-<%= link_to "Edit Ratings", experience_story_path(@story) %>
+<%= link_to "edit tagging", story_taggings_path(@story) %>
+<%= link_to "edit ratings", experience_story_path(@story) %>
