--- a/app/views/stories/show.html.erb
+++ b/app/views/stories/show.html.erb
@@ -25,7 +25,7 @@
 
 <footer>
   <div class="button-container">
-    <%= link_to 'edit Story', edit_story_path(@story), class: 'button button__edit button__left' %>
+    <%= link_to 'edit story', edit_story_path(@story), class: 'button button__edit button__left' %>
     <%= link_to "delete",
       story_path(@story),
       method: :delete,
