--- a/app/views/tags/new.html.erb
+++ b/app/views/tags/new.html.erb
@@ -1,2 +1,11 @@
-<h1>Tags#new</h1>
-<p>Find me in app/views/tags/new.html.erb</p>
+<div class="container__contents">
+  <div class="tagcategories-container">
+    <% if TagCategory.all.present? %>
+      <% TagCategory.all.each do |tagcategory| %>
+        <div class="tag-category card">
+          <%= link_to tagcategory.name, tags_create_path(story_id: @story, tag_category: tagcategory) %>
+        </div>
+      <% end %>
+    <% end %>
+  </div>
+</div>
