--- a/app/views/tags/edit.html.erb
+++ b/app/views/tags/edit.html.erb
@@ -3,7 +3,7 @@
     <%= f.error_notification %>
     <%= f.input :name,
                 required: true,
-                input_html: { autocomplete: 'Tag Name' } %>
+                input_html: { placeholder: 'name this tag...' } %>
 </div>
 <footer>
     <div class="button-container">
